Augment run.sh a bit; collector selectable via HTTPGCTEST_COLLECTOR, plus some tweaks.